TP7-CORRECTED/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: form-k8s-acc
  labels:
    env: acc
