TP7-CORRECTED/back-deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: back-training-app
  namespace: form-k8s-acc
spec:
  replicas: 2
  selector:
    matchLabels:
      app: back-training-app
  template:
    metadata:
      labels:
        app: back-training-app
    spec:
      containers:
      - name: back-training-app
        image: axelpereira/k8s-training-test-app-back:1.1
        imagePullPolicy: IfNotPresent
