TP7-CORRECTED/front-deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: front-training-app
  namespace: form-k8s-acc
spec:
  replicas: 2
  selector:
    matchLabels:
      app: front-training-app
  template:
    metadata:
      labels:
        app: front-training-app
    spec:
      containers:
      - name: front-training-app
        image: axelpereira/k8s-training-test-app-front:1.1
        imagePullPolicy: Always
