TP7-CORRECTED/mongo-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongo
  namespace: form-k8s-acc
  labels:
    name: mongo
spec:
  ports:
  - port: 27017
    targetPort: 27017
  selector:
    role: mongo
