TP7-CORRECTED/app-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: app-ingress-front
  namespace: form-k8s-acc
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - http:
      paths:
      - path: /acc(.*)
        backend:
          serviceName: front-training-app
          servicePort: 80
      - path: /acc/api/(.*)
        backend:
          serviceName: back-training-app
          servicePort: 80
